Added updated ru (and eo) .arb files.

--- a/assets/l10n/intl_eo.arb
+++ b/assets/l10n/intl_eo.arb
@@ -6,6 +6,7 @@
   "blocks": "Blokoj",
   "appearance": "Aspekto",
   "post_style": "Afiŝostilo",
+  "comment_style": "Komentostilo",
   "password": "Pasvorto",
   "email_or_username": "Retpoŝtadreso aŭ uzantonomo",
   "totp_2fa_token": "TOTP 2FA Token (se ebligita)",
@@ -99,6 +100,8 @@
   "by": "de",
   "view_on": "Vidu sur alia kazo",
   "foreign_community_info": "Ŝargante la komunumon en la alia kazo. Notu, ke se ĉi tio estas la unua fojo, ke la komunumo estas rigardata en la kazo, ĉi tiu procezo povas daŭri iom da tempo.",
+  "federated_post_info": "Ŝargante la afiŝon en la alia kazo. Notu, ke se ĉi tio estas la unua fojo, ke la afiŝo estas rigardata en la kazo, ĉi tiu procezo povas daŭri iom da tempo.",
+  "not_found": "Ne trovita",
   "error": "Eraro: {error_text}",
   "not_a_mod_or_admin": "Nek reguligisto nek administranto.",
   "not_an_admin": "Ne estas administranto.",
@@ -194,8 +197,14 @@
   "post_style_compact": "Kompakta Vido",
   "post_title_size": "Afiŝo-Titolo-Grando",
   "post_header_size": "Afiŝkapo-Grando",
+  "post_body_size": "Korpo-Grando",
   "post_style_rounded_corners": "Rondaj Anguloj",
   "post_style_shadow": "Karto Ombro",
+  "comment_title_size": "Titolo-Grando",
+  "comment_indent_width": "Indentlarĝo",
+  "comment_pill_size": "Punkto-Grando",
+  "comment_body_size": "Korpo-Grando",
+  "comment_time_stamp": "Tempomarko-Grando",
   "search": "Serĉi",
   "send_message": "Sendi mesaĝon",
   "top_hour": "Supraj Oro",
@@ -264,5 +273,8 @@
   "add_link": "Aldonu ligilon",
   "cancel": "Nuligi",
   "editor_add_link_label": "etikedo",
-  "failed_to_upload_image": "Malsukcesis alŝuti bildon"
+  "failed_to_upload_image": "Malsukcesis alŝuti bildon",
+  "instance_error": "Hmm... ŝajnas, ke via kazo havas problemojn por respondi.",
+  "instance_record_notfound": "Hmm... ŝajnas, ke via ekzemplo ne povis trovi tion, kion vi serĉis.",
+  "try_again": "Provu denove."
 }
