--- a/assets/l10n/intl_ru.arb
+++ b/assets/l10n/intl_ru.arb
@@ -1,11 +1,38 @@
 {
   "@@locale": "ru",
   "settings": "Настройки",
-  "password": "Пароль",
-  "email_or_username": "Эл.почта или Имя пользователя",
-  "posts": "Поста",
-  "comments": "Комментарии",
-  "modlog": "Журнал Администраторов",
+  "general": "Общие",
+  "accounts": "Аккаунты",
+  "blocks": "Блоки",
+  "appearance": "Внешний вид",
+  "post_style": "Стиль поста",
+  "comment_style": "Стиль коммента",
+  "password": "Пароль", 
+  "email_or_username": "Электропочта или Имя пользователя",
+  "totp_2fa_token": "TOTP 2FA Token (if enabled)",
+  "posts": "Посты",
+  "comments": "Комменты",
+  "modlog": "Модлог",
+  "modlog_reason": "Причина",
+  "modlog_removed": "удалён",
+  "modlog_restored": "восстановлен",
+  "modlog_locked": "заблокирован",
+  "modlog_unlocked": "разблокирован",
+  "modlog_stickied": "закреплён",
+  "modlog_unstickied": "откреплён",
+  "modlog_banned": "забанен",
+  "modlog_unbanned": "разбанен",
+  "modlog_appointed": "назначен",
+  "modlog_transferred": "перенесён",
+  "modlog_post_separator": "пост",
+  "modlog_comment_separator": "коммент",
+  "modlog_community_separator": "сообщество",
+  "modlog_appointed_separator": "как модератор",
+  "modlog_transferred_separator": "в",
+  "modlog_banned_separator": "из сообщества",
+  "modlog_admin_separator": "как админ",
+  "modlog_nologs": "Нет больше логов для показа.",
+  "modlog_by": "по",
   "community": "Сообщество",
   "url": "URL",
   "title": "Заголовок",
@@ -13,13 +40,13 @@
   "nsfw": "NSFW",
   "post": "пост",
   "save": "сохранить",
-  "subscribed": "Подписаны",
+  "subscribed": "Подписанные",
   "local": "Локальные",
   "all": "Все",
   "replies": "Ответы",
   "mentions": "Упоминания",
   "from": "от",
-  "to": "в",
+  "to": "кому",
   "deleted_by_creator": "удалено автором",
   "more": "больше",
   "mark_as_read": "пометить как прочитанное",
@@ -35,49 +62,72 @@
   "display_name": "Отображаемое имя",
   "bio": "БИО",
   "email": "Эл. почта",
-  "matrix_user": "Пользователь Matrix",
-  "sort_type": "Тип сортировки",
+  "matrix_user": "Matrix пользователь",
+  "sort_type": "Сортировка постов",
+  "comment_sort_type": "Сортировка комментов",
   "type": "Тип",
+  "show_everything_feed": "Показ фида ВСЕ",
+  "show_everything_feed_explanation": "Объединённый контент из всех инстансов, даже из тех, в которые вы не вошли, поэтому будут видны сообщения, без возможности голосования или ответа.",
+  "use_in_app_browser": "Использовать внутренний браузер",
+  "other_settings": "Другие",
+  "disable_animations": "Отключить анимации",
+  "hide_nsfw": "Скрыть NSFW контент",
+  "hide_nsfw_explanation": "Контент в сообщениях NSFW будет скрыт до нажатия на нём.",
   "show_nsfw": "Показывать NSFW контент",
-  "send_notifications_to_email": "Посылать уведомления на Эл. почту",
-  "delete_account": "Удалить Аккаунт",
+  "send_notifications_to_email": "Посылать уведомления на электропочту",
+  "remove_account": "Убрать аккаунт",
+  "delete_account": "Удалить аккаунт",
   "saved": "Сохранено",
   "communities": "Сообщества",
   "users": "Пользователи",
   "theme": "Тема",
+  "amoled_dark_mode": "AMOLED тёмный режим",
+  "primary_color": "Первичный цвет",
+  "reset_to_default": "сбросить к умолчаниям",
+  "post_view": "Вид постов",
+  "show_scores": "Показать очки",
+  "font": "Шрифт",
+  "preview": "Предпросмотр",
+  "choose_language": "Выбрать язык",
   "language": "Язык",
-  "hot": "Популярные",
+  "hot": "Горячие",
   "new_": "Новые",
   "old": "Старые",
   "top": "Лучшие",
   "chat": "Чат",
-  "admin": "администратор",
+  "admin": "админ",
+  "pinned": "pinned",
   "by": "от",
-  "not_a_mod_or_admin": "Не модератор и не админинстратор.",
-  "not_an_admin": "Не администратор.",
+  "view_on": "Смотреть на другом инстансе",
+  "foreign_community_info": "Загрузка сообщества в другом инстансе. Обратите внимание: если это первый раз, когда сообщество просматривается в инстансе, этот процесс может занять некоторое время.",
+  "federated_post_info": "Загрузка сообщения в другом инстансе. Обратите внимание, что если это первый раз, когда запись просматривается в инстансе, этот процесс может занять некоторое время.",
+  "not_found": "Не найден",
+  "error": "Ошибка: {error_text}",
+  "not_a_mod_or_admin": "Не модератор и не админ.",
+  "not_an_admin": "Не админ.",
   "couldnt_find_post": "Не удалось найти пост.",
-  "not_logged_in": "Не авторизованы.",
-  "site_ban": "Вы были заблокированы на данном сайте",
-  "community_ban": "Вы были заблокированы в данном сообществе.",
-  "downvotes_disabled": "Голосование не понравилось отключено",
+  "not_logged_in": "Не авторизован.",
+  "site_ban": "Вы были забанены на данном сайте",
+  "community_ban": "Вы были забанены в данном сообществе.",
+  "downvotes_disabled": "Даунвоты отключены",
   "invalid_url": "Недопустимый URL.",
   "locked": "заблокировано",
-  "couldnt_create_comment": "Не удалось создать комментарий.",
-  "couldnt_like_comment": "Не удалось лайкнуть комментарий.",
-  "couldnt_update_comment": "Не удалось обновить комментарий.",
-  "no_comment_edit_allowed": "Комментарий редактировать запрещено.",
-  "couldnt_save_comment": "Не удалось сохранить комментарий.",
-  "couldnt_get_comments": "Не удалось получить комментарии.",
+  "couldnt_create_comment": "Не удалось создать коммент.",
+  "couldnt_like_comment": "Не удалось лайкнуть коммент.",
+  "couldnt_update_comment": "Не удалось обновить коммент.",
+  "no_comment_edit_allowed": "Запрещено редактировать коммент.",
+  "couldnt_save_comment": "Не удалось сохранить коммент.",
+  "couldnt_get_comments": "Не удалось получить комменты.",
   "report_reason_required": "Укажите причину жалобы.",
   "report_too_long": "Жалоба слишком длинная.",
   "couldnt_create_report": "Невозможно создать жалобу.",
   "couldnt_resolve_report": "Невозможно разрешить жалобу.",
-  "invalid_post_title": "Недопустимый заголовок записи",
+  "invalid_post_title": "Недопустимый заголовок поста",
   "couldnt_create_post": "Не удалось создать пост.",
   "couldnt_like_post": "Не удалось лайкнуть пост.",
   "couldnt_find_community": "Сообщество не найдено.",
-  "couldnt_get_posts": "Не удалось найти посты",
-  "no_post_edit_allowed": "Запрещено комментировать пост.",
+  "couldnt_get_posts": "Не удалось получить посты",
+  "no_post_edit_allowed": "Запрещено редактировать пост.",
   "couldnt_save_post": "Не удалось сохранить пост.",
   "site_already_exists": "Сайт уже существует.",
   "couldnt_update_site": "Не удалось обновить сайт.",
@@ -86,46 +136,149 @@
   "community_moderator_already_exists": "Модератор сообщества уже существует.",
   "community_follower_already_exists": "Подписчик сообщества уже существует.",
   "not_a_moderator": "Не модератор.",
-  "couldnt_update_community": "Не удалось обновить Сообщество.",
+  "couldnt_update_community": "Не удалось обновить сообщество.",
   "no_community_edit_allowed": "Редактирование сообщества запрещено.",
   "system_err_login": "Системная ошибка. Попробуйте выйти из системы и вернуться обратно.",
   "community_user_already_banned": "Пользователь сообщества уже забанен.",
-  "couldnt_find_that_username_or_email": "Указанные имя пользователя или электронную почту найти не удалось.",
-  "password_incorrect": "Неверный пароль.",
+  "couldnt_find_that_account": "Не удалось найти этот аккаунт.",
+  "couldnt_find_that_username_or_email": "Не удалось найти указанные имя пользователя или электропочту.",
+  "password_incorrect": "Пароль неверный.",
   "registration_closed": "Регистрация закрыта",
   "invalid_password": "Неверный пароль. Пароль должен быть не длиннее 60 символов.",
   "passwords_dont_match": "Пароли не совпадают.",
-  "captcha_incorrect": "Некорректная капча.",
-  "invalid_username": "Неверное имя пользователя.",
+  "captcha_incorrect": "Капча некорректная .",
+  "invalid_username": "Имя пользователя неверное.",
   "bio_length_overflow": "БИО пользователя не может быть длиннее 300 символов.",
   "couldnt_update_user": "Не удалось обновить пользователя.",
   "couldnt_update_private_message": "Не удалось обновить личное сообщение.",
-  "couldnt_update_post": "Не удалось обновить посты",
+  "couldnt_update_post": "Не удалось обновить пост",
   "couldnt_create_private_message": "Не удалось создать личное сообщение.",
   "no_private_message_edit_allowed": "Не разрешено редактировать личное сообщение.",
   "post_title_too_long": "Название поста слишком длинное.",
-  "email_already_exists": "Эл. почта уже существует.",
+  "email_already_exists": "Электропочта уже существует.",
   "user_already_exists": "Пользователь уже существует.",
+  "number_of_users_online": "{formattedCount,plural, =1{{formattedCount} пользователь онлайн} other{{formattedCount} пользователей онлайн}}",
+  "number_of_comments": "{formattedCount,plural, =1{{formattedCount} коммент} other{{formattedCount} комментов}}",
+  "number_of_posts": "{formattedCount,plural, =1{{formattedCount} пост} other{{formattedCount} постов}}",
+  "number_of_subscribers": "{formattedCount,plural, =1{{formattedCount} подписчик} other{{formattedCount} подписчиков}}",
+  "number_of_users": "{formattedCount,plural, =1{{formattedCount} пользователь} other{{formattedCount} пользователей}}",
+  "number_of_communities": "{formattedCount,plural, =1{{formattedCount} сообщество} other{{formattedCount} сообществ}}",
   "unsubscribe": "Отписаться",
   "subscribe": "Подписаться",
+  "pending": "Ожидание",
   "messages": "Сообщения",
-  "banned_users": "Блокированные Пользователи",
-  "delete_account_confirm": "Предупреждение: это действие полностью уничтожит все данные вашего аккаунта. Введите свой пароль для подтверждения.",
-  "new_password": "Новый Пароль",
-  "verify_password": "Подтвердите Пароль",
-  "old_password": "Старый Пароль",
-  "show_avatars": "Показывать Аватары",
+  "banned_users": "Забаненные пользователи",
+
+  "add_user_or_instance": "Добавить аккаунт пользователя или инстанс",
+  "add_user": "Добавить аккаунт пользователя",
+  "remove_user": "Убрать аккаунт пользователя",
+  "remove_user_confirm": "Убрать аккаунт пользователя?",
+  "remove_user_confirm_explanation": "Уверены что хотите убрать {user_at_instance}?",
+  "set_as_default": "Установить умолчально",
+  "import_settings" :"Импорт настроек в Liftoff",
+  "import_successful" : "Импорт успешен",
+  
+  "add_instance": "Добавить инстанс",
+  "instance_added": "Инстанс успешно добавлен",
+  "remove_instance": "Убрать инстанс",
+  "remove_instance_confirm": "Убрать инстанс?",
+  "remove_instance_confirm_explanation": "Уверены что хотите убрать {instance}?",
+  
+  "block": "Блокировка",
+  "block_user": "Блокировать пользователя",
+  "block_community": "Блокировать сообщество",
+  "unblock": "Разблокировать",
+  "unblock_user": "Разблокировать пользователя",
+  "unblock_community": "Разблокировать сообщество",
+
+  "remove_account_confirm": "Ваш аккаунт и данные удалятся из этого приложения, но останутся на сервере.",
+  "delete_account_confirm": "Предупреждение: это действие ПОЛНОСТЬЮ УНИЧТОЖИТ все данные вашего аккаунта в приложении и на сервере. Введите свой пароль для подтверждения.",
+  "new_password": "Новый пароль",
+  "verify_password": "Подтвердите пароль",
+  "old_password": "Старый пароль",
+  "show_avatars": "Показывать аватары",
+  "show_thumbnails": "Показывать превью",
+  "post_style_compact": "Компактный вид",
+  "post_title_size": "Размер названия поста",
+  "post_header_size": "Размер заголовка поста",
+  "post_style_rounded_corners": "Скруглённые углы",
+  "post_style_shadow": "Тень карточки",
+  "comment_title_size": "Размер заголовка",
+  "comment_indent_width": "Ширина отступа",
+  "comment_pill_size": "Размер пилюли",
+  "comment_body_size": "Размер тела",
+  "comment_time_stamp": "Размер метки времени",
   "search": "Поиск",
-  "send_message": "Послать Сообщение",
+  "send_message": "Послать сообщение",
+  "top_hour": "Лучшие за 1 час",
+  "top_six_hour": "Лучшие за 6 часов",
+  "top_twelve_hour": "Лучшие за 12 часов",
   "top_day": "Лучшие за День",
   "top_week": "Лучшие за Неделю",
   "top_month": "Лучшие за Месяц",
   "top_year": "Лучшие за Год",
   "top_all": "Лучшие за Всё Время",
   "most_comments": "Наиболее Комментируемые",
-  "new_comments": "Новые Комментарии",
+  "new_comments": "Новые Комменты",
   "active": "Активные",
+  "view_all_comments": "Смотреть все комменты",
+  "show_context": "Показать контекст",
   "bot_account": "Аккаунт Бота",
-  "show_bot_accounts": "Покзать Аккаунты Ботов",
-  "show_read_posts": "Показать Прочитанные Посты"
+  "show_bot_accounts": "Показывать Аккаунты Ботов",
+  "show_read_posts": "Показывать Прочитанные Посты",
+  "site_not_set_up": "Этот сайт ещё не настроен",
+  "nerd_stuff": "Нердские штуки",
+  "open_in_browser": "Открыть в браузере",
+  "share_text": "Поделиться текстом",
+  "share_url": "Поделиться URL",
+  "translate": "Переводчик",
+  "make_text_selectable": "Сделать текст выделяемым",
+  "make_text_unselectable": "Сделать текст невыделяемым",
+  "show_fancy_text": "Показать fancy текст",
+  "show_raw_text": "Показать raw текст",
+  "delete_comment": "Удалить коммент",
+  "restore_comment": "Восстановить коммент",
+  "report_comment": "Пожаловаться на коммент",
+  "delete_post": "Удалить пост",
+  "restore_post": "Восстановить пост",
+  "report_post": "Пожаловаться на пост",
+
+  "cannot_open_in_browser": "Невозможно открыть в браузере",
+  "about": "О программе",
+  "see_all": "Смотреть все",
+  "admins": "Админы",
+  "trending_communities": "Трендовые сообщества",
+  "communities_of_instance": "Сообщества {instance}",
+  "day": "день",
+  "week": "неделя",
+  "month": "месяц",
+  "six_months": "6 месяцев",
+  "required_field": "необходимое поле",
+  "no_communities_found": "Не найдено сообществ",
+  "network_error": "Сетевая ошибка",
+  "editor_bold": "жирный",
+  "editor_italics": "курсив",
+  "editor_link": "вставить ссылку",
+  "editor_image": "вставить изображение",
+  "editor_user": "ссылка на пользователя",
+  "editor_community": "ссылка на сообщество",
+  "editor_header": "вставить заголовок",
+  "editor_strikethrough": "зачёркнутый",
+  "editor_quote": "кавычки",
+  "editor_list": "список",
+  "editor_code": "код",
+  "editor_subscript": "нижний индекс",
+  "editor_superscript": "верхний индекс",
+  "editor_spoiler": "спойлер",
+  "editor_help": "помощь по markdown",
+  "insert_text_here_placeholder": "[текст писать здесь]",
+  "select_user": "Выберите пользователя",
+  "select_community": "Выберите сообщество",
+  "add_link": "Добавить ссылку",
+  "cancel": "Отмена",
+  "editor_add_link_label": "метка",
+  "failed_to_upload_image": "Сбой загрузки изображения",
+  "instance_error": "Хмм... похоже что ваш инстанс не отвечает вовремя.",
+  "instance_record_notfound": "Хмм... похоже что ваш инстанс Не может найти то, что вы ищете.",
+  "try_again": "Попробовать снова"
 }
