--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -709,5 +709,11 @@
   },
   "accounts_explanation": "The first instance on this screen will be treated as your default in other screens, and the marked account will be the default on that instance.\n\nPress and hold on an account to make it your default on that instance.\n\nPress and hold an instance or account to remove it from this app. You can add it back later. You may lose some local settings but your bookmarks, subscriptions etc will still be held on your instance.",
   "@accounts_explanation": {
+  },
+  "comment_tag_op": "OP",
+  "@comment_tag_op": {
+  },
+  "comment_tag_you": "YOU",
+  "@comment_tag_you": {
   }
 }
