Added chips and toLowercase()

--- a/assets/l10n/intl_en.arb
+++ b/assets/l10n/intl_en.arb
@@ -719,8 +719,14 @@
   "instance_filter": "Instance filter",
   "@instance_filter": {
   },
-  "instance_filter_explanation": "A list of terms, separated by spaces, to identify instances you wish to block from your home tab posts feed. e.g. 'nsfw blahaj'",
+  "instance_filter_explanation": "A list of terms in names of instances you wish to block from all your post feeds. A good start is: nsfw porn yiff",
   "@instance_filter_explanation": {
+  },
+  "instance_filter_add": "Add term",
+  "@instance_filter_add": {
+  },
+  "instance_filter_none": "No filters chosen",
+  "@instance_filter_none": {
   },
   "sensitive_content": "Sensitive Content",
   "@sensitive_content": {
